repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_repository_big__active_repository.snap
---
source: repology-webapp/tests/snapshot_tests/badge_repository_big.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: content-length: 5150
---
<svg xmlns="http://www.w3.org/2000/svg" width="159" height="145"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="15" font-weight="bold"><text x="79" y="13" dominant-baseline="central" fill="#010101" fill-opacity=".3">Repository status</text><text x="79" y="12" dominant-baseline="central">Repository status</text></g><rect y="25" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="80" y="36" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Projects total</text><text x="80" y="35" text-anchor="end" dominant-baseline="central">Projects total</text><text x="96" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">10</text><text x="96" y="35" text-anchor="middle" dominant-baseline="central">10</text></g><rect x="85" y="45" width="23" height="20" fill="#4c1"/><rect x="108" y="45" width="51" height="20" fill="#4c1"/><rect y="45" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="80" y="56" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Up to date</text><text x="80" y="55" text-anchor="end" dominant-baseline="central">Up to date</text><text x="96" y="56" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1</text><text x="96" y="55" text-anchor="middle" dominant-baseline="central">1</text><text x="133" y="56" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">20.00%</text><text x="133" y="55" text-anchor="middle" dominant-baseline="central">20.00%</text></g><rect x="85" y="65" width="23" height="20" fill="#e05d44"/><rect x="108" y="65" width="51" height="20" fill="#e05d44"/><rect y="65" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="80" y="76" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Outdated</text><text x="80" y="75" text-anchor="end" dominant-baseline="central">Outdated</text><text x="96" y="76" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">2</text><text x="96" y="75" text-anchor="middle" dominant-baseline="central">2</text><text x="133" y="76" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">40.00%</text><text x="133" y="75" text-anchor="middle" dominant-baseline="central">40.00%</text></g><rect x="85" y="85" width="23" height="20" fill="#e00000"/><rect x="108" y="85" width="51" height="20" fill="#e00000"/><rect y="85" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="80" y="96" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Vulnerable</text><text x="80" y="95" text-anchor="end" dominant-baseline="central">Vulnerable</text><text x="96" y="96" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">3</text><text x="96" y="95" text-anchor="middle" dominant-baseline="central">3</text><text x="133" y="96" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">30.00%</text><text x="133" y="95" text-anchor="middle" dominant-baseline="central">30.00%</text></g><rect x="85" y="105" width="23" height="20" fill="#9f9f9f"/><rect x="108" y="105" width="51" height="20" fill="#9f9f9f"/><rect y="105" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="80" y="116" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Bad versions</text><text x="80" y="115" text-anchor="end" dominant-baseline="central">Bad versions</text><text x="96" y="116" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">4</text><text x="96" y="115" text-anchor="middle" dominant-baseline="central">4</text><text x="133" y="116" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">40.00%</text><text x="133" y="115" text-anchor="middle" dominant-baseline="central">40.00%</text></g><rect y="125" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="80" y="136" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Maintainers</text><text x="80" y="135" text-anchor="end" dominant-baseline="central">Maintainers</text><text x="96" y="136" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">7</text><text x="96" y="135" text-anchor="middle" dominant-baseline="central">7</text></g></g></svg>
