repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_repository_big__header_empty.snap
---
source: repology-webapp/tests/snapshot_tests/badge_repository_big.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 4837
---
<svg xmlns="http://www.w3.org/2000/svg" width="156" height="120"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><rect y="0" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="77" y="11" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Projects total</text><text x="77" y="10" text-anchor="end" dominant-baseline="central">Projects total</text><text x="93" y="11" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">10</text><text x="93" y="10" text-anchor="middle" dominant-baseline="central">10</text></g><rect x="82" y="20" width="23" height="20" fill="#4c1"/><rect x="105" y="20" width="51" height="20" fill="#4c1"/><rect y="20" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="77" y="31" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Up to date</text><text x="77" y="30" text-anchor="end" dominant-baseline="central">Up to date</text><text x="93" y="31" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1</text><text x="93" y="30" text-anchor="middle" dominant-baseline="central">1</text><text x="130" y="31" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">20.00%</text><text x="130" y="30" text-anchor="middle" dominant-baseline="central">20.00%</text></g><rect x="82" y="40" width="23" height="20" fill="#e05d44"/><rect x="105" y="40" width="51" height="20" fill="#e05d44"/><rect y="40" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="77" y="51" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Outdated</text><text x="77" y="50" text-anchor="end" dominant-baseline="central">Outdated</text><text x="93" y="51" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">2</text><text x="93" y="50" text-anchor="middle" dominant-baseline="central">2</text><text x="130" y="51" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">40.00%</text><text x="130" y="50" text-anchor="middle" dominant-baseline="central">40.00%</text></g><rect x="82" y="60" width="23" height="20" fill="#e00000"/><rect x="105" y="60" width="51" height="20" fill="#e00000"/><rect y="60" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="77" y="71" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Vulnerable</text><text x="77" y="70" text-anchor="end" dominant-baseline="central">Vulnerable</text><text x="93" y="71" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">3</text><text x="93" y="70" text-anchor="middle" dominant-baseline="central">3</text><text x="130" y="71" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">30.00%</text><text x="130" y="70" text-anchor="middle" dominant-baseline="central">30.00%</text></g><rect x="82" y="80" width="23" height="20" fill="#9f9f9f"/><rect x="105" y="80" width="51" height="20" fill="#9f9f9f"/><rect y="80" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="77" y="91" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Bad versions</text><text x="77" y="90" text-anchor="end" dominant-baseline="central">Bad versions</text><text x="93" y="91" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">4</text><text x="93" y="90" text-anchor="middle" dominant-baseline="central">4</text><text x="130" y="91" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">40.00%</text><text x="130" y="90" text-anchor="middle" dominant-baseline="central">40.00%</text></g><rect y="100" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="77" y="111" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Maintainers</text><text x="77" y="110" text-anchor="end" dominant-baseline="central">Maintainers</text><text x="93" y="111" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">7</text><text x="93" y="110" text-anchor="middle" dominant-baseline="central">7</text></g></g></svg>
