repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_repository_big__legacy_repository.snap
---
source: repology-webapp/tests/snapshot_tests/badge_repository_big.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: content-length: 1144
---
<svg xmlns="http://www.w3.org/2000/svg" width="222" height="45"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="15" font-weight="bold"><text x="111" y="13" dominant-baseline="central" fill="#010101" fill-opacity=".3">Repository status</text><text x="111" y="12" dominant-baseline="central">Repository status</text></g><rect x="0" y="25" width="222" height="20" fill="#e00000"/><rect y="25" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="111" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">Repository not known or was removed</text><text x="111" y="35" text-anchor="middle" dominant-baseline="central">Repository not known or was removed</text></g></g></svg>
